# god-code

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.codetape/: component-map.json  config.json
.github/: FUNDING.yml
.github/workflows/: docs.yml  publish.yml
docs/: empty-project-to-first-verified-change.md  gameplay-intent-and-enemy-ai-roadmap.md  index.md
docs/cli/: ask.md  chat.md
docs/getting-started/: first-run.md  install.md
docs/mcp/: overview.md
docs/plans/: 2026-04-04-api-backend-design.md  2026-04-04-api-backend-impl.md  2026-04-04-bullet-hell-sprite-qa-demo-polish-backlog.md  2026-04-04-demo-ready-upgrade.md  2026-04-05-dogfooding-inventory.md  2026-04-05-v08-design.md  2026-04-05-v08-impl.md  2026-04-05-work-status.md  2026-04-06-auto-flow-impl.md  2026-04-06-interactive-ux-redesign.md  2026-04-07-god-code-prelaunch-security-audit-design.md  2026-04-07-god-code-prelaunch-security-audit-report.md  2026-04-07-god-code-prelaunch-security-audit.md  2026-04-07-v1.0.0-ux-upgrade-design.md
docs/providers/: byok-and-oauth.md
docs/tui/: menu-and-commands.md  settings-and-byok.md
docs/validation/: quality-gate.md
godot_agent/: cli.py  entrypoint.py  mcp_server.py
godot_agent/agents/: __init__.py  configs.py  (+2 more)
scripts/: install-hooks.sh  vision_model_comparison.py
tests/: cli_test_utils.py  test_auto_flow.py  test_cli_config_flow.py  test_cli_interactive_flows.py  test_e2e.py  test_package_compatibility.py  test_runtime_switch_commands.py
(+184 files in other folders)
