[project]
name = "god-code"
version = "0.9.1"
description = "AI coding agent specialized for Godot game development"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "chuisiufai"}]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.7",
    "Pillow>=10.3",
    "rich>=13.0",
    "packaging>=21.0",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.12",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
]
docs = [
    "mkdocs-material>=9.6",
]

[project.scripts]
god-code = "godot_agent.entrypoint:main"

[project.urls]
Homepage = "https://github.com/888wing/god-code"
Repository = "https://github.com/888wing/god-code"

[tool.hatch.build.targets.wheel]
packages = ["godot_agent"]
exclude = [
  "**/config.json",
  "**/auth.json",
  "**/.env",
  "**/.env.*",
  "**/*.key",
  "**/*.pem",
  "**/.DS_Store",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
